--- a/index.html
+++ b/index.html
@@ -8,31 +8,53 @@
 </head>
 <body>
     <header>
-        <h1>你好，我是 Zen 🚀</h1>
-        <p>欢迎来到我的 GitHub 主页！</p>
+        <h1>Zen is not here.<span class="blinking-cursor">|</span></h1>
+        <style>
+            .blinking-cursor {
+            animation: blink 1s step-end infinite;
+            }
+
+            @keyframes blink {
+            from, to {
+                color: transparent;
+            }
+            50% {
+                color: rgb(221, 218, 178);
+
+            }
+            }
+        </style>
+        <p>Zen如今不在这里</p>
         <nav>
-            <a href="#about">关于我</a>
-            <a href="#projects">项目</a>
-            <a href="#contact">联系我</a>
+            
         </nav>
     </header>
 
-    <section id="about">
-        <h2>关于我</h2>
-        <p>我是一个对 <strong>生物研究、编程、音乐创作</strong> 充满热情的人！</p>
+    <section id="about" style="display: flex; align-items: center;">
+        <img src="resources/zen.png" alt="Zen" style="width:400px;height:auto; margin-right: 20px;">
+        <div>
+            <h2>About Zen</h2>
+            <p>Biochemist, Keyboard player, Daydreamer, Hippie</p>
+        </div>
     </section>
 
-    <section id="projects">
-        <h2>我的项目</h2>
-        <ul>
-            <li>🧬 <a href="https://github.com/你的GitHub用户名/biology-project">生物研究</a></li>
-            <li>💻 <a href="https://github.com/你的GitHub用户名/coding-project">编程项目</a></li>
-            <li>🎵 <a href="https://你的音乐网站.com">音乐创作</a></li>
+    <section id="explore" style="display: flex; align-items: center; position: relative;"></section>
+        <div>
+            <h2 style="writing-mode: vertical-rl; text-orientation:sideways; margin-bottom: 10px; position:absolute; left: 750px; top:45%; font-size: 30px;">To Explore</h2>
+        </div>
+        <img src="resources/human.png" alt="Human" style="width:600px;height:auto; position: absolute; right:5%; top:15%; ">
+    </section>
+
+    <section id="links" style="position: absolute; top: 30%; right: 9%; transform: translate(-50%, -50%); width: 20%;">
+        <ul style="color: rgb(221, 218, 178);"></ul>
+            <li style="position:absolute; left:10%; top:23%; font-size: 20px;"><a href="https://github.com/你的GitHub用户名/biology-project" style="color: rgb(221, 218, 178); text-decoration: none;">Research Projects</a></li>
+            <li style="position:absolute; left:12%; top:578%; font-size: 20px;"><a href="https://github.com/你的GitHub用户名/coding-project" style="color: rgb(221, 218, 178); text-decoration: none;">Casual Literature</a></li>
+            <li style="position:absolute; left:25%; top:305%; font-size: 20px;"><a href="https://你的音乐网站.com" style="color: rgb(221, 218, 178); text-decoration: none;">Zen's Music</a></li>
         </ul>
     </section>
 
     <footer>
-        <p>📧 联系我：<a href="mailto:your@email.com">your@email.com</a></p>
+        <p>寻找Zen：<a href="mailto:Zennyang@outlook.com" style="text-decoration: none; color: rgb(221, 218, 178);">Zennyang@outlook.com</a></p>
     </footer>
 
     <script src="script.js"></script> <!-- 引入JS文件 -->
