--- a/index.html
+++ b/index.html
@@ -40,15 +40,15 @@
 
     <section id="explore" style="display: flex; align-items: center; position: relative;"></section>
         <div>
-            <h2 style="writing-mode: vertical-rl; text-orientation:sideways; margin-bottom: 10px; position:absolute; left: 750px; top:45%; font-size: 30px;">To Explore</h2>
+            <h2 style="writing-mode: vertical-rl; text-orientation:sideways; margin-bottom: 10px; position:absolute; left: 50%; top:45%; font-size: 30px;">To Explore</h2>
         </div>
         <img src="resources/human.png" alt="Human" style="width:600px;height:auto; position: absolute; right:5%; top:15%; ">
     </section>
 
     <section id="links" style="position: absolute; top: 30%; right: 9%; transform: translate(-50%, -50%); width: 20%;">
         <ul style="color: rgb(221, 218, 178);"></ul>
-            <li style="position:absolute; left:10%; top:23%; font-size: 20px;"><a href="https://github.com/你的GitHub用户名/biology-project" style="color: rgb(221, 218, 178); text-decoration: none;">Research Projects</a></li>
-            <li style="position:absolute; left:12%; top:578%; font-size: 20px;"><a href="https://github.com/你的GitHub用户名/coding-project" style="color: rgb(221, 218, 178); text-decoration: none;">Casual Literature</a></li>
+            <li style="position:absolute; left:10%; top:23%; font-size: 20px;"><a href="https://github.com/Zennyang/biology-project" style="color: rgb(221, 218, 178); text-decoration: none;">Research Projects</a></li>
+            <li style="position:absolute; left:12%; top:578%; font-size: 20px;"><a href="https://github.com/Zennyang/coding-project" style="color: rgb(221, 218, 178); text-decoration: none;">Casual Literature</a></li>
             <li style="position:absolute; left:25%; top:305%; font-size: 20px;"><a href="https://你的音乐网站.com" style="color: rgb(221, 218, 178); text-decoration: none;">Zen's Music</a></li>
         </ul>
     </section>
